Basic replacement of the Pin screen from BaseActivity.java to PinLockManager.kt
The Pin screen is now shown when it's supposed to be shown and the back
button is inhibited, still need to migrate measures for screen in Recent
 apps and flashing of the previous activity

MAILAND-2542

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -86,6 +86,10 @@
                 android:name="androidx.work.WorkManagerInitializer"
                 android:value="androidx.startup"
                 tools:node="remove" />
+
+            <meta-data
+                android:name="ch.protonmail.android.pinlock.presentation.PinLockManagerInitializer"
+                android:value="androidx.startup" />
         </provider>
 
         <provider
