Fix AppInitializer lint issue

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -87,6 +87,10 @@
                 android:value="androidx.startup"
                 tools:node="remove" />
 
+            <meta-data
+                android:name="ch.protonmail.android.pinlock.presentation.PinLockManagerInitializer"
+                android:value="androidx.startup"
+                tools:node="remove"/>
         </provider>
 
         <provider
