Add SecurityManager.kt and include Screenshot Preventing
Having a single place where to handle security matters ( FLAG_SECURE )
is the best solution, in order to be independent by BaseActivity and any
 Activity in general and also avoid race conditions where the
 PinLockManager.kt enables the Flag and then the BaseActivity disables
 it

MAILAND-2730

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -88,7 +88,7 @@
                 tools:node="remove" />
 
             <meta-data
-                android:name="ch.protonmail.android.pinlock.presentation.PinLockManagerInitializer"
+                android:name="ch.protonmail.android.security.presentation.SecurityManagerInitializer"
                 android:value="androidx.startup"
                 tools:node="remove"/>
         </provider>
