Added Proton Libs Git Submodules Support (Core version 6.0.0).

--- a/gradle.properties
+++ b/gradle.properties
@@ -48,3 +48,6 @@ org.aspectj.weaver.Dump.exception=false
 # https://issuetracker.google.com/issues/172784894?pli=1
 # https://github.com/bcgit/bc-java/issues/762
 android.jetifier.ignorelist=bcprov-jdk15on
+
+# By default use core libs from Git Submodule.
+useCoreGitSubmodule=false
