--- a/gradle.properties
+++ b/gradle.properties
@@ -34,8 +34,8 @@
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
-# org.gradle.parallel=true
-org.gradle.jvmargs=-Xmx4g
+org.gradle.parallel=true
+org.gradle.jvmargs=-Xmx8g
 android.useAndroidX=true
 android.enableJetifier=true
 
