Create the OnboardingActivity
MAILAND-2695

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -433,6 +433,7 @@
         <activity
             android:name="me.proton.core.crypto.validator.presentation.ui.CryptoValidatorErrorDialogActivity"
             android:theme="@style/ProtonTheme.Transparent" />
+        <activity android:name=".onboarding.presentation.OnboardingActivity" />
     </application>
 
 </manifest>
