--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -194,7 +194,7 @@
             android:label="@string/local_storage"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".details.presentation.MessageDetailsActivity"
+            android:name=".details.presentation.ui.MessageDetailsActivity"
             android:exported="false"
             android:configChanges="orientation|screenSize"
             android:parentActivityName=".mailbox.presentation.MailboxActivity">
@@ -206,10 +206,10 @@
             android:name=".activities.messageDetails.MessageViewHeadersActivity"
             android:configChanges="orientation|screenSize"
             android:exported="false"
-            android:parentActivityName=".details.presentation.MessageDetailsActivity">
+            android:parentActivityName=".details.presentation.ui.MessageDetailsActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".details.presentation.MessageDetailsActivity" />
+                android:value=".details.presentation.ui.MessageDetailsActivity" />
         </activity>
         <activity
             android:name=".activities.composeMessage.ComposeMessageActivity"
