Splits the new user and existing user v4 onboarding
Extracts the base classes and the concrete implementations for
the new user onboarding and the existing user onboarding.

MAILAND-2825

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -419,7 +419,8 @@
         <activity
             android:name="me.proton.core.crypto.validator.presentation.ui.CryptoValidatorErrorDialogActivity"
             android:theme="@style/ProtonTheme.Transparent" />
-        <activity android:name=".onboarding.presentation.OnboardingActivity" />
+        <activity android:name=".onboarding.newuser.presentation.NewUserOnboardingActivity" />
+        <activity android:name=".onboarding.existinguser.presentation.ExistingUserOnboardingActivity" />
     </application>
 
 </manifest>
