--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -425,6 +425,7 @@
             android:name="me.proton.core.crypto.validator.presentation.ui.CryptoValidatorErrorDialogActivity"
             android:theme="@style/ProtonTheme.Transparent" />
         <activity android:name=".onboarding.newuser.presentation.NewUserOnboardingActivity" />
+        <activity android:name=".onboarding.existinguser.presentation.ExistingUserOnboardingActivity" />
     </application>
 
 </manifest>
