--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,8 +33,6 @@
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.USE_BIOMETRIC" />
     <uses-permission android:name="android.permission.USE_FINGERPRINT" />
-    <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES"
-        tools:ignore="QueryAllPackagesPermission" />
 
     <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM"/>
 
@@ -62,6 +60,10 @@
         <intent>
             <action android:name="android.intent.action.DIAL" />
         </intent>
+
+        <!-- Calendar -->
+        <package android:name="me.proton.android.calendar" />
+
     </queries>
 
     <application
