Do not run `i18n-sync-crowdin` job, if the pipeline was triggered externally (e.g. by Core project).

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -264,6 +264,7 @@ i18n-sync-crowdin:
   extends: .i18n-sync-crowdin-shared
   except:
     refs:
+      - pipelines
       - schedules
     variables:
       - $TEST_TYPE == "feature" || $TEST_TYPE == "regression"
