--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -90,6 +90,16 @@
             android:exported="false"
             tools:node="merge">
 
+            <meta-data
+                android:name="me.proton.core.humanverification.presentation.HumanVerificationInitializer"
+                android:value="androidx.startup"
+                tools:node="remove" />
+
+            <meta-data
+                android:name="me.proton.core.auth.presentation.MissingScopeInitializer"
+                android:value="androidx.startup"
+                tools:node="remove" />
+
             <!-- Disable default WorkManagerInitializer for use Hilt injection -->
             <meta-data
                 android:name="androidx.work.WorkManagerInitializer"
