--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -100,6 +100,11 @@
                 android:value="androidx.startup"
                 tools:node="remove" />
 
+            <meta-data
+                android:name="me.proton.core.plan.presentation.UnredeemedPurchaseInitializer"
+                android:value="androidx.startup"
+                tools:node="remove" />
+
             <!-- Disable default WorkManagerInitializer for use Hilt injection -->
             <meta-data
                 android:name="androidx.work.WorkManagerInitializer"
