Update Core libs to 9.2.0. Third-party library updates & emulator version update for instrumentation tests.
- Change device for instrumentation tests (due to SIGSEGV crash on API 28, x86)
- Update compileSdk to 32 (required by Compose)
- AGP 7.3.1 (needed to fix jacoco issue for instrumented tests)
- Kotlin 1.6.21 (1.6.20 is required by AGP and 1.6.21 required by Compose)
- Remove `buildToolsVersion` - it's determined by Android Gradle Plugin
- Hilt 2.44
- Android Test 1.4.0
- Android Test Orchestrator 1.4.1
- Dagger 2.44
- Fragment 1.5.4

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -205,7 +205,7 @@ firebase instrumentation tests:
       --app app/build/outputs/apk/beta/debug/ProtonMail-Android-${VERSION_NAME}-beta-debug.apk
       --test app/build/outputs/apk/androidTest/beta/debug/ProtonMail-Android-${VERSION_NAME}-beta-debug-androidTest.apk
       --type=instrumentation
-      --device model=Pixel2,version=28
+      --device model=Pixel2.arm,version=28
       --test-targets "notPackage ch.protonmail.android.uitests"
       --use-orchestrator
       --num-flaky-test-attempts=1
