Disable ui tests stage on CI to avoid flakiness failures

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -150,7 +150,7 @@ firebase feature tests:
   dependencies:
     - build uiAutomation
   rules:
-    - if: '$TEST_TYPE == "feature" || $TEST_TYPE == "regression"'
+    - when: never
   tags:
     - medium
   variables:
