Replaced Git Submodules by Include Core Build Gradle Plugin.

--- a/gradle.properties
+++ b/gradle.properties
@@ -49,5 +49,7 @@ org.aspectj.weaver.Dump.exception=false
 # https://github.com/bcgit/bc-java/issues/762
 android.jetifier.ignorelist=bcprov-jdk15on
 
-# By default use core libs from Git Submodule.
-useCoreGitSubmodule=false
+# IncludeGit Gradle Plugin: override include with local.
+#auto.include.git.dirs=../
+#local.git.proton-libs=../proton-libs
+
