--- a/app/old.build.gradle
+++ b/app/old.build.gradle
@@ -21,7 +21,7 @@
 dependencies {
     // region libs
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation project(':gopenpgp')
+    implementation(files("../../proton-libs/gopenpgp/gopenpgp.aar"))
     implementation files('libs/commons-email-1.3.jar')
     implementation files('libs/mail.jar')
     implementation files('libs/mail-additional.jar')
