feat: Added Unauthenticated Session support.
chore: Upgraded Core to 9.9.0.
chore: Upgraded Core Gradle Plugins to 1.1.2 (Detekt update).

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -126,6 +126,11 @@
                 tools:node="remove"/>
 
             <meta-data
+                android:name="me.proton.core.network.presentation.init.UnAuthSessionFetcherInitializer"
+                android:value="androidx.startup"
+                tools:node="remove" />
+
+            <meta-data
                 android:name="ch.protonmail.android.security.presentation.SecurityManagerInitializer"
                 android:value="androidx.startup"
                 tools:node="remove" />
